fix: Adjusting and updating the documentation of endpoints. :bug:
