# components/manager/api/swagger.json
@@ -5,7 +5,7 @@
         "title": "Plugin Smart Template",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {},
-        "version": "2.0.0"
+        "version": "3.0.0"
     },
     "host": "localhost:4005",
     "basePath": "/",
@@ -26,6 +26,13 @@
                         "description": "The authorization token in the 'Bearer\taccess_token' format. Only required when auth plugin is enabled.",
                         "name": "Authorization",
                         "in": "header"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Organization ID",
+                        "name": "X-Organization-Id",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -63,6 +70,13 @@
                         "description": "The authorization token in the 'Bearer\taccess_token' format. Only required when auth plugin is enabled.",
                         "name": "Authorization",
                         "in": "header"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Organization ID",
+                        "name": "X-Organization-Id",
+                        "in": "header",
+                        "required": true
                     },
                     {
                         "type": "string",
@@ -171,7 +185,7 @@
                                         "items": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/plugin-smart-templates_v2_pkg_mongodb_report.Report"
+                                                "$ref": "#/definitions/plugin-smart-templates_v3_pkg_mongodb_report.Report"
                                             }
                                         },
                                         "limit": {
@@ -186,6 +200,18 @@
                                     }
                                 }
                             ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.HTTPError"
                         }
                     }
                 }
@@ -230,7 +256,25 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/plugin-smart-templates_v2_pkg_mongodb_report.Report"
+                            "$ref": "#/definitions/plugin-smart-templates_v3_pkg_mongodb_report.Report"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.HTTPError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.HTTPError"
                         }
                     }
                 }
@@ -275,7 +319,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/plugin-smart-templates_v2_pkg_mongodb_report.Report"
+                            "$ref": "#/definitions/plugin-smart-templates_v3_pkg_mongodb_report.Report"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.HTTPError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.HTTPError"
                         }
                     }
                 }
@@ -321,6 +383,24 @@
                         "description": "OK",
                         "schema": {
                             "type": "file"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.HTTPError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.HTTPError"
                         }
                     }
                 }
@@ -391,7 +471,7 @@
                                         "items": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/plugin-smart-templates_v2_pkg_mongodb_template.Template"
+                                                "$ref": "#/definitions/plugin-smart-templates_v3_pkg_mongodb_template.Template"
                                             }
                                         },
                                         "limit": {
@@ -406,6 +486,18 @@
                                     }
                                 }
                             ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.HTTPError"
                         }
                     }
                 }
@@ -462,7 +554,19 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/plugin-smart-templates_v2_pkg_mongodb_template.Template"
+                            "$ref": "#/definitions/plugin-smart-templates_v3_pkg_mongodb_template.Template"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.HTTPError"
                         }
                     }
                 }
@@ -471,9 +575,6 @@
         "/v1/templates/{id}": {
             "get": {
                 "description": "Get a template by id",
-                "consumes": [
-                    "multipart/form-data"
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -496,27 +597,6 @@
                         "required": true
                     },
                     {
-                        "type": "file",
-                        "description": "Template file (.tpl)",
-                        "name": "templateFile",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Output format (e.g., pdf, html)",
-                        "name": "outputFormat",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Description of the template",
-                        "name": "description",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
                         "type": "string",
                         "description": "Template ID",
                         "name": "id",
@@ -528,7 +608,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/plugin-smart-templates_v2_pkg_mongodb_template.Template"
+                            "$ref": "#/definitions/plugin-smart-templates_v3_pkg_mongodb_template.Template"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.HTTPError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.HTTPError"
                         }
                     }
                 }
@@ -564,6 +662,24 @@
                 "responses": {
                     "204": {
                         "description": "No Content"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.HTTPError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.HTTPError"
+                        }
                     }
                 }
             },
@@ -626,7 +742,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/plugin-smart-templates_v2_pkg_mongodb_template.Template"
+                            "$ref": "#/definitions/plugin-smart-templates_v3_pkg_mongodb_template.Template"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.HTTPError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.HTTPError"
                         }
                     }
                 }
@@ -649,7 +783,7 @@
                         "additionalProperties": {
                             "type": "object",
                             "additionalProperties": {
-                                "$ref": "#/definitions/plugin-smart-templates_v2_pkg_model.FilterCondition"
+                                "$ref": "#/definitions/plugin-smart-templates_v3_pkg_model.FilterCondition"
                             }
                         }
                     }
@@ -742,7 +876,7 @@
                 }
             }
         },
-        "plugin-smart-templates_v2_pkg_model.FilterCondition": {
+        "plugin-smart-templates_v3_pkg_model.FilterCondition": {
             "type": "object",
             "properties": {
                 "between": {
@@ -787,7 +921,7 @@
                 }
             }
         },
-        "plugin-smart-templates_v2_pkg_mongodb_report.Report": {
+        "plugin-smart-templates_v3_pkg_mongodb_report.Report": {
             "type": "object",
             "properties": {
                 "completedAt": {
@@ -806,7 +940,7 @@
                         "additionalProperties": {
                             "type": "object",
                             "additionalProperties": {
-                                "$ref": "#/definitions/plugin-smart-templates_v2_pkg_model.FilterCondition"
+                                "$ref": "#/definitions/plugin-smart-templates_v3_pkg_model.FilterCondition"
                             }
                         }
                     }
@@ -832,7 +966,7 @@
                 }
             }
         },
-        "plugin-smart-templates_v2_pkg_mongodb_template.Template": {
+        "plugin-smart-templates_v3_pkg_mongodb_template.Template": {
             "type": "object",
             "properties": {
                 "createdAt": {
