# components/manager/internal/adapters/http/in/report.go
@@ -34,6 +34,9 @@ type ReportHandler struct {
 //	@Param			X-Organization-Id	header		string					true	"Organization ID"
 //	@Param			reports				body		model.CreateReportInput	true	"Report Input"
 //	@Success		201					{object}	report.Report
+//	@Failure		400					{object}	pkg.HTTPError
+//	@Failure		404					{object}	pkg.HTTPError
+//	@Failure		500					{object}	pkg.HTTPError
 //	@Router			/v1/reports [post]
 func (rh *ReportHandler) CreateReport(p any, c *fiber.Ctx) error {
 	ctx := c.UserContext()
@@ -77,10 +80,13 @@ func (rh *ReportHandler) CreateReport(p any, c *fiber.Ctx) error {
 //	@Tags			Reports
 //	@Accept			json
 //	@Produce		json
-//	@Param			Authorization		header	string	false	"The authorization token in the 'Bearer	access_token' format. Only required when auth plugin is enabled."
-//	@Param			X-Organization-Id	header	string	true	"Organization ID"
-//	@Param			id					path	string	true	"Report ID"
-//	@Success		200					{file}	any
+//	@Param			Authorization		header		string	false	"The authorization token in the 'Bearer	access_token' format. Only required when auth plugin is enabled."
+//	@Param			X-Organization-Id	header		string	true	"Organization ID"
+//	@Param			id					path		string	true	"Report ID"
+//	@Success		200					{file}		any
+//	@Failure		400					{object}	pkg.HTTPError
+//	@Failure		404					{object}	pkg.HTTPError
+//	@Failure		500					{object}	pkg.HTTPError
 //	@Router			/v1/reports/{id}/download [get]
 func (rh *ReportHandler) GetDownloadReport(c *fiber.Ctx) error {
 	ctx := c.UserContext()
@@ -197,7 +203,10 @@ func (rh *ReportHandler) GetDownloadReport(c *fiber.Ctx) error {
 //	@Param			X-Organization-Id	header		string	true	"Organization ID"
 //	@Param			id					path		string	true	"Report ID"
 //	@Success		200					{object}	report.Report
-//	@Router			/v1/reports/{id}													 [get]
+//	@Failure		400					{object}	pkg.HTTPError
+//	@Failure		404					{object}	pkg.HTTPError
+//	@Failure		500					{object}	pkg.HTTPError
+//	@Router			/v1/reports/{id}															 [get]
 func (rh *ReportHandler) GetReport(c *fiber.Ctx) error {
 	ctx := c.UserContext()
 
@@ -243,6 +252,8 @@ func (rh *ReportHandler) GetReport(c *fiber.Ctx) error {
 //	@Param			limit				query		int		false	"Limit"	default(10)
 //	@Param			page				query		int		false	"Page"	default(1)
 //	@Success		200					{object}	model.Pagination{items=[]report.Report,page=int,limit=int,total=int}
+//	@Failure		400					{object}	pkg.HTTPError
+//	@Failure		500					{object}	pkg.HTTPError
 //	@Router			/v1/reports [get]
 func (rh *ReportHandler) GetAllReports(c *fiber.Ctx) error {
 	ctx := c.UserContext()
